# 5740-Deep-Space

./: .gitignore  4jlogger  4jloggrer  README.md
2019-Robot/DS_Client/: .project  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
2019-Robot/DS_Client/src/main/java/DS_Client/: App.java
2019-Robot/DS_Client/src/test/java/DS_Client/: AppTest.java
2019-Robot/Robot/: build.gradle
2019-Robot/Robot/src/: 4jlog.properties
2019-Robot/logging/src/com/nickblackburn/: Main.java
Robot/src/main/java/frc/robot/: Robot.java  RobotMap.java  ShuffleboardData.java
Vision/GRIP/: GripPipeline.java  NewVision.grip  vision.grip
Vision/GRIP2.0/: .project  Grip  GripPipeline.1.java  GripPipeline.java  build.gradle  settings.gradle
Vision/GRIP2.0/VISION/: CMakeLists.txt  main.cpp  vision.h
Vision/GRIP2.0/c++ vision/: CMakeLists.txt
Vision/GRIP2.0/open-java/: build.gradle  settings.gradle
Vision/GRIP2.0/opencv/: CMakeLists.txt  main.cpp  make error.md
Vision/GRIP2.0/src/main/java/Grip2/: GripPipeline.java  Vision.java  grip.py  grip.txt  install-grip-pylibs.sh  main.java  opencv.py  run.py
Vision/GRIP2.0/src/test/java/Grip2/: AppTest.java
Vision/JAVA-opemncv/: .project  build.gradle  settings.gradle
Vision/java-multiCameraServer/: .project
Vision/java-multiCameraServer/src/main/java/: GripPipeLine.java  GripPipeline.java  Main.java  how to compile GripPipeline.txt
Vision/python-opencv/: install-grip-pylibs.sh  opencv.py  run.py
Vision/python-opencv/Python_cv/: networktableinit.py  opencv.py
(+45 files in other folders)
